# von-karman

./: .gitignore  CMakeLists.txt  Makefile  run.sh
.github/workflows/: compile.yml
config/: airfoil.txt  circle.txt  circle_fin.txt  input.txt  mountain.txt  rectangle.txt
data/: input.txt  solution.txt  u_solution.txt
docs/: README.md  input_README.txt  objects_README.txt
include/: NS.hpp  misc.hpp  object.hpp  write.hpp
latex/: bibliography.sty  main.tex  math.sty  refs.bib  z_structure.tex
latex/1_Sections/: 1_intro.tex  2_methods.tex  3_numeric.tex  4_conclusion.tex
latex/presentation/: 1_Introduction.tex  2_methods.tex  3_results.tex  4_Conclusion.tex  beamerthemesorbonne.sty  main.tex  math.sty
latex/report/: refs.bib
others/: Advection.py  NS.ipynb  NavierStokes.py  poisson.ipynb  prova  prova.cpp  prova.py  sparse.txt  tries.ipynb  try.ipynb  web.tex
others/karman/: Plotting.ipynb  PyDNS.py  README.md  worker_semilag.py
others/von-karman-jonabranch/: .gitignore
output/: setup.h5
output/results/: sol_0.h5  sol_1.h5  sol_10.h5  sol_100.h5  sol_101.h5  sol_102.h5  sol_103.h5  sol_104.h5  sol_105.h5  sol_106.h5  sol_107.h5  sol_108.h5  sol_109.h5  sol_11.h5  sol_110.h5  sol_111.h5  sol_112.h5  sol_113.h5  sol_114.h5  sol_115.h5  sol_116.h5  sol_117.h5  sol_118.h5  sol_119.h5  sol_12.h5  sol_120.h5  sol_121.h5  sol_122.h5  sol_123.h5  sol_124.h5  sol_125.h5  sol_126.h5  sol_127.h5  sol_128.h5  sol_129.h5  sol_13.h5  sol_130.h5  (+163 more)
src/: NS.cpp  animation.py  defaults.py  main.c  main.cpp  plot.ipynb  plot_functions.py  read_data.py
vtkhdf5/: Makefile  demo_vtkhdf.cpp  main.cpp  vtkhdf5.cpp  vtkhdf5.hpp
vtkhdf5_test/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.windows  Makefile  interpolate.cpp  interpolate_field.cpp  main.cpp  main_class.cpp
(+98 files in other folders)
